Fix #4264 remove height requirements on iOS mode

--- a/src/definitions/modules/sidebar.less
+++ b/src/definitions/modules/sidebar.less
@@ -248,10 +248,6 @@ html.ios {
   -webkit-overflow-scrolling: touch;
 }
 
-html.ios,
-html.ios body {
-  height: initial !important;
-}
 
 
 /*******************************
